--- a/webapp/src/app/components/landing/landing.component.html
+++ b/webapp/src/app/components/landing/landing.component.html
@@ -1,3 +1,4 @@
-<p>
-  landing works!
-</p>
+
+<div class="episodes">
+    <app-episode-tile *ngFor="let episode of episodes"></app-episode-tile>
+</div>
