--- a/webapp/src/app/components/episode-tile/episode-tile.component.html
+++ b/webapp/src/app/components/episode-tile/episode-tile.component.html
@@ -3,6 +3,10 @@
     <mat-spinner></mat-spinner>
   </div>
   <div *ngIf="episode">
-    
+    <mat-card-header>
+        <img mat-card-avatar src="{{ episode.image.medium }}">	
+        <mat-card-title>{{ episode.name }}</mat-card-title>
+        <mat-card-subtitle>Season {{ episode.season }} Episode {{ episode.number }}</mat-card-subtitle>
+      </mat-card-header>
   </div>
-</mat-card>>
+</mat-card>
