--- a/webapp/src/app/components/landing/landing.component.scss
+++ b/webapp/src/app/components/landing/landing.component.scss
@@ -1,10 +1,21 @@
+.header{
+    padding-top: 50px;
+    width: 50%;
+    margin: auto;
+    mat-form-field{
+        width: 100%;
+    }
+}
+
 .episodes{
     float: left;
     padding: 0 50px;
+    padding-top: 50px;
 }
 app-episode-tile{
     float: left;
     margin: 4%;
     margin-bottom: 30px;
+    margin-top: 0;
     width: 25%;
 }
