--- a/webapp/src/app/components/episode-dialog/episode-dialog.component.html
+++ b/webapp/src/app/components/episode-dialog/episode-dialog.component.html
@@ -1,13 +1,13 @@
 <mat-card>
   <mat-card-header>
     <img mat-card-avatar src="{{ episode.image.medium }}">	
-    <mat-card-title>{{ episode.name }}</mat-card-title>
-    <mat-card-subtitle>Season {{ episode.season }} Episode {{ episode.number }}</mat-card-subtitle>
+    <mat-card-title><h2>{{ episode.name }}</h2></mat-card-title>
+    <mat-card-subtitle><h3>Season {{ episode.season }} Episode {{ episode.number }}</h3></mat-card-subtitle>
   </mat-card-header>
   <img mat-card-image src="{{ episode.image.original }}">
   <mat-card-content>
-    <div>Aired: {{ episode.airtime }} on {{ episode.airdate }}</div>
-    <div>Runtime: {{ episode.runtime }} minutes</div>
+    <div><b>Aired:</b> {{ episode.airtime }} on {{ episode.airdate }}</div>
+    <div><b>Runtime</b> {{ episode.runtime }} minutes</div>
     <div class="summary" [innerHTML]="episode.summary"></div>
     <a target="_blank" href="{{ episode.url }}">More Details</a>
   </mat-card-content>
