--- a/webapp/src/app/components/episode-tile/episode-tile.component.scss
+++ b/webapp/src/app/components/episode-tile/episode-tile.component.scss
@@ -2,6 +2,8 @@ mat-card{
     width: calc(100% - 48px);
     height: 90px;
 }
+
+/* Displays if no episode data loaded */
 mat-spinner{
     margin: auto;
 }
