--- a/webapp/src/app/components/landing/landing.component.scss
+++ b/webapp/src/app/components/landing/landing.component.scss
@@ -7,10 +7,18 @@ mat-toolbar{
     color: white;
     position: fixed;
     z-index: 10;
-
+    @media all and (max-width: 767px){
+        height: 150px;
+        margin-top: -50px;
+    }
     .links{
         position: absolute;
         right: 0;
+        @media all and (max-width: 767px){
+            bottom: 0;
+            overflow-x: scroll;
+            width: 100%;
+        }
         > button{
             float: right;
             width: 100px;
